Fix collapsing header

--- a/app/assets/stylesheets/components/_header.scss
+++ b/app/assets/stylesheets/components/_header.scss
@@ -3,6 +3,7 @@
 // Styleguide header
 
 .header {
+  overflow: hidden;
   position: relative;
   background: $color-green-primary;
 }
